feat(sandside): #88 add createdBy to entity and refactor property
rename property  to be sonar compliant

refs #88